--- a/templates/contrato/lineaTiempo.html.twig
+++ b/templates/contrato/lineaTiempo.html.twig
@@ -251,7 +251,7 @@
                             </div>
 
                         </div>
-                        <small class="text-muted">Formato: Letra-Rol-Año</small>
+                        <small class="text-muted">Formato: Letra-N°-Año</small>
                     </div>  
                     <div class="col-sm-12 col-md-3 ">
                         <p class="txtNombreCausa"></p>
