--- a/templates/panel_abogado/contrata.html.twig
+++ b/templates/panel_abogado/contrata.html.twig
@@ -209,15 +209,14 @@
     <h4 id="materia">Causa</h4>
     </div>
 </div>
+        <select name="cboMateria" class="form-control cbomateria" placeholder="Materias" style="visibility:hidden" >
+                            
+            {% for cuenta_materia in cuenta_materias %}
+            <option value="{{ cuenta_materia.materia.id }}" selected>{{ cuenta_materia.materia.nombre }}</option>
+            {% endfor %}
+        </select>
+        
         <div class="row">
-            
-                <select name="cboMateria" class="form-control cbomateria" placeholder="Materias" style="visibility:hidden" >
-                    
-                    {% for cuenta_materia in cuenta_materias %}
-                    <option value="{{ cuenta_materia.materia.id }}" selected>{{ cuenta_materia.materia.nombre }}</option>
-                    {% endfor %}
-                </select>
-           
             <div class="col-sm-12 col-md-3 submateria">
                 <select name="cboSubMateria" class="form-control cboSubMateria"  >
                     <option>Seleccione Servicio</option>
@@ -247,8 +246,21 @@
                 <input type="text" name="txtCaratulado" placeholder="Caratulado" class="form-control txtCaratulado" size="50" maxlength="30">
                 <small class="text-muted">Caracteres max. 50</small>
             </div> 
+            
+            <div class="col-sm-12 col-md-1">
+                <button type="button" class="btn btn-primary btn-agregar" onclick="javascript:agregarCausa()"><i class="fas fa-plus"></i></button>
+            </div>             
+        </div>
+        <div class="row">
+            
             <div class="col-sm-12 col-md-3">
                 
+                <select name="corte" class="form-control corte">
+                    <option value=""> Seleccione Corte </option>
+                    
+                </select> 
+            </div>   
+            <div class="col-sm-12 col-md-6">
                 <select name="juzgado" class="form-control juzgado">
                     <option value=""> Seleccione Juzgado </option>
                     {% for juzgado in juzgados %}
@@ -256,14 +268,6 @@
                     {% endfor %}
                 </select> 
             </div>   
-            <div class="col-sm-12 col-md-1">
-                <button type="button" class="btn btn-primary btn-agregar" onclick="javascript:agregarCausa()"><i class="fas fa-plus"></i></button>
-
-            </div>  
-           
-            
-            
-    
         </div>
         <div class="card-body" >
              <div id="estrategiasJuridicas">
@@ -551,6 +555,7 @@
                     
                     $('.txtCaratulado').val("");
                     $('.cboSubMateria').val("");
+                    $('.corte').val("");
                     $('.juzgado').val("");
                     $(".btn-agregar").attr("disabled", false);
                 }
@@ -872,7 +877,7 @@
     }
 
   function cambiamateria(valor){
-        
+        debugger;
         $.ajax({
             url:"/materia/"+valor+"/combo",
             type: "post",
@@ -893,22 +898,75 @@
                 $(".cbosubmateria").append("<option>Seleccione Servicio</option>");
                
                 cambiaEstrategiaJuridica($(".cbomateria").val());
-                
+                obtenerCortes(valor);
                 $(".cboescritos").empty();
                 $("#estrategiasJuridicas").empty();
+
             }
 
 
         });
+        
+    }
+    function obtenerCortes(cuenta){
+        debugger;
+        if($(".cbomateria").val()=="1"){
+            $(".corte").show();
+            $.ajax({
+                url:"/materia/"+cuenta+"/corte_combo",
+                type: "post",
+                dataType: "html",
+                cache: false,
+                contentType: false,
+                processData: false,
+                async: true,
+                beforeSend: function(){
+                    //$(".loading").html(' <div class="overlay"><i class="fas fa-3x fa-sync-alt fa-spin"></i><div class="text-bold pt-2">Loading...</div></div>');
+                    
+                },
+                success:function(data){
+                    $(".corte").html(data);
+                    //$(".loading").html('');
+                    console.log(data);
+                }
+            });
+        }else{
+            $(".corte").hide();
+            $(".corte").val("");
+        }
+
     }
 
-    function cambiaAcreedores(cuenta){
+    $(".corte").on("change",function(){
+        $.ajax({
+                url:"/juzgado_cuenta/"+$(this).val()+"/corte_combo",
+                type: "post",
+                dataType: "html",
+                cache: false,
+                contentType: false,
+                processData: false,
+                async: true,
+                beforeSend: function(){
+                    //$(".loading").html(' <div class="overlay"><i class="fas fa-3x fa-sync-alt fa-spin"></i><div class="text-bold pt-2">Loading...</div></div>');
+                    
+                },
+                success:function(data){
+                    $(".juzgado").html(data);
+                    
+                }
 
+            });
+    });
+
+    function cambiaAcreedores(cuenta){
+        debugger;
         if(cuenta == 7){
             $("#acreedorVacio").html('<input type="hidden" id="Institucion" value="1">');
         }else{
              $("#acreedorVacio").html('');
         }
+        
+
         $.ajax({
                 url:"/juzgado_cuenta/"+cuenta+"/combo",
                 type: "post",
@@ -927,7 +985,7 @@
                 }
 
             });
-
+        
     }
     $('.emailCliente').inputmask({
         mask: "*{1,100}[.*{1,100}][.*{1,100}][.*{1,100}]@*{1,50}[.*{2,50}][.*{1,3}]",
@@ -991,7 +1049,6 @@
             return false;
         }
         
-       
         if(!$.validateRut($(".format-rut").val())) {
         
             alert("Debe ingresar un rut valido");
